
//#service-request-reply
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.helloworld.grpc";
option java_outer_classname = "HelloWorldGrpcReqProto";


// Request payload
message HelloWorldReq {
  // Each message attribute is strongly typed.
  // You also must assign a "tag" number.
  // Each tag number is unique within the message.
  string name = 1;

  // There are many more basics types, like Enum, Map
  // See https://developers.google.com/protocol-buffers/docs/proto3
  // for more information.
}

message HelloWorldResp {
  string greeting = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service HelloWorldGrpcService {
  // Define a RPC operation
  rpc sayHello(HelloWorldReq) returns (HelloWorldResp);
}
